--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ body
     border-radius: 50%;
     background: #00000077;
     color: #ffffff;
-    font-family: Helvetica, ARial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     line-height: 40px;
     font-weight: 100;
@@ -80,7 +80,7 @@ body
     background: #00000077;
     border: 1px solid #ffffff77;
     color: #ffffff;
-    font-family: Helvetica, ARial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     line-height: 1.3em;
     font-weight: 100;
